--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<html>
+<style>
+h1 {
+  color: green;
+}
+</style>
+
 <h1> Hello World </h1>
 
 <div>
@@ -60,6 +67,6 @@
         <img alt="Image showing a sky view image of Zachary engineering building" src="./zach.jpeg">
     </section>
 </div>
-
+</html>
 
 
