--- a/index.html
+++ b/index.html
@@ -1,16 +1,8 @@
-<html>
-<style>
-h1 {
-  color: green;
-}
-</style>
-
 <h1> Hello World </h1>
-<div>
-    body {
+div {
   background-color: lightblue;
 }
-<div>
+
 <section>
     <h2> Section Header 1 </h2>
     <table>
@@ -70,6 +62,6 @@ h1 {
         <img alt="Image showing a sky view image of Zachary engineering building" src="./zach.jpeg">
     </section>
 </div>
-</html>
+
 
 
