--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <h1> Hello World </h1>
 <style>
+body
+    {
+    background-color:lightblue;
+    }
 h1{
     color: green;
 }
+ 
     
 
 </style>
+
 
 <section>
     <h2> Section Header 1 </h2>
